# scaramanga

./: .gitignore  Cargo.toml  LICENCE  README.md  config.toml.dist
.github/workflows/: ci.yml
src/: config.rs  countries.rs  main.rs  rank.rs  uri.rs
tests/: incoherent_ip.toml  incoherent_protocol.toml
