[package]
name = "scaramanga"
version = "0.3.7"
authors = ["Shempignon <nicolas@pointndots.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
simple-error = "0.3"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"

[dev-dependencies]
httpmock = "0.6"
lazy_static = "1.4"
